# reusables

./: .pre-commit-config.yaml  .pylintrc  build_triggers.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  size_diff.py
.github/actions/bool_diff/: action.yml
.github/actions/ghcr_build_push/: action.yml
.github/workflows/: docker-ci.yml  pre-commit.yml  size_diff.yml
